components/nexus/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.84.1
          ports:
            - containerPort: 8081
              name: nexus-ui
            - containerPort: 8082
              name: nexus-docker
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 600Gi
