components/nexus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
spec:
  ports:
    - name: nexus-ui
      port: 8081
      protocol: TCP
      targetPort: 8081
    - name: nexus-docker
      port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: nexus
  type: ClusterIP
