components/nexus/route-nexus-docker.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus-docker
  namespace: nexus
  annotations:
    openshift.io/host.generated: "true"
spec:
  port:
    targetPort: nexus-docker
  tls:
    termination: edge
  to:
    kind: Service
    name: nexus
    weight: 100
  wildcardPolicy: None
